# douyin-mcp

./: .env.example  .gitignore  AUTHORS.md  CONTRIBUTING.md  MANIFEST.in  PLATFORM_COMPLIANCE.md  README.md  easy-install.ps1  easy-install.sh  pyproject.toml
src/douyin_creator_mcp/: accounts.py  browser_smoke.py  cli.py  compliance.py  config.py  errors.py  instance_lock.py  logging_utils.py  responses.py  runtime.py  server.py
src/douyin_creator_mcp/browser/: commands.py  executor.py  extractors.py  media_observer.py  profile_lock.py  session.py
src/douyin_creator_mcp/content/: __init__.py  asr.py  media.py  models.py
src/douyin_creator_mcp/services/: browser_service.py  transcript_coordinator.py  transcript_policy.py  transcript_query.py
src/douyin_creator_mcp/storage/: batch_compatibility.py  db.py  migration.py  schemas.sql  transcripts.py
src/douyin_creator_mcp/storage/migrations/: 001_browser_v1_baseline.sql  002_video_transcript_pipeline.sql  003_video_visibility.sql  004_account_analytics.sql  __init__.py
src/douyin_creator_mcp/tools/: browser_tools.py  transcript_tools.py
tests/: test_browser_tools.py  test_config.py  test_multi_account.py
