[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "douyin-creator-mcp"
version = "0.1.0"
description = "Local Douyin creator MCP server using a persistent browser login session."
readme = "README.md"
authors = [{ name = "Kuhakucai" }]
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=3.4,<4",
  "playwright>=1.45",
  "tzdata>=2024.1"
]

[project.optional-dependencies]
asr = ["faster-whisper>=1.1,<2"]

[project.scripts]
douyin-mcp = "douyin_creator_mcp.cli:main"
douyin-creator-mcp = "douyin_creator_mcp.server:main"
douyin-browser-smoke = "douyin_creator_mcp.browser_smoke:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
douyin_creator_mcp = ["storage/*.sql", "storage/migrations/*.sql"]

[tool.setuptools.data-files]
"share/doc/douyin-creator-mcp" = ["PLATFORM_COMPLIANCE.md", "AUTHORS.md"]
